fix "back" button in resturant/details

--- a/ResturantManagment/Views/Resturant/Details.cshtml
+++ b/ResturantManagment/Views/Resturant/Details.cshtml
@@ -17,6 +17,6 @@
     {
         <p>@food.Name</p>
     }
-  <a asp-controller="Food" asp-action="Index" class="btn btn-primary">Back</a>
+  <a asp-controller="Resturant" asp-action="Index" class="btn btn-primary">Back</a>
 </form>
 
